--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,16 @@
   "private": true,
   "dependencies": {
     "bootstrap": "git://github.com/twbs/bootstrap.git#v4.0.0-beta",
-    "popper.js": "^1.12.3"
+    "popper.js": "^1.12.3",
+    "owl.carousel": "^2.2.1"
+  },
+  "overrides": {
+    "owl.carousel": {
+      "main": [
+        "./dist/owl.carousel.min.js",
+        "./dist/assets/owl.carousel.min.css",
+        "./dist/assets/owl.theme.default.min.css"
+      ]
+    }
   }
 }
