--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "bootstrap": "git://github.com/twbs/bootstrap.git#v4.0.0-beta",
     "popper.js": "^1.12.3",
-    "owl.carousel": "^2.2.1"
+    "owl.carousel": "^2.2.1",
+    "lightbox2": "^2.9.0"
   },
   "overrides": {
     "owl.carousel": {
@@ -17,6 +18,12 @@
         "./dist/owl.carousel.min.js",
         "./dist/assets/owl.carousel.min.css",
         "./dist/assets/owl.theme.default.min.css"
+      ]
+    },
+    "lightbox2": {
+      "main": [
+        "./dist/css/lightbox.min.css",
+        "./dist/js/lightbox.min.js"
       ]
     }
   }
