add lightbox images to assets

--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "isotope": {
       "main": [
         "./dist/isotope.pkgd.min.js"
-      ]
+      ],
+      "dependencies": {}
     }
   }
 }
