Cards (masonry) added to new

--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "popper.js": "^1.12.3",
     "owl.carousel": "^2.2.1",
     "lightbox2": "^2.9.0",
-    "isotope": "^3.0.4"
+    "isotope": "^3.0.4",
+    "masonry": "^4.2.0"
   },
   "overrides": {
     "owl.carousel": {
